feat : logic app std creation - sb-queue-guid

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,8 @@
     "vscode": {
       "extensions": [
         "vscjava.vscode-java-pack",
+        "ms-dotnettools.csdevkit",
+        "ms-vscode.vscode-node-azure-pack",
         "ms-azuretools.vscode-azurelogicapps",
         "github.copilot",
         "github.copilot-chat",
