fix : quick fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "azureLogicAppsStandard.deploySubpath": "app/logic-app",
-    "azureLogicAppsStandard.projectSubpath": "app/logic-app",
+    "azureLogicAppsStandard.deploySubpath": "../app/logic-app",
+    "azureLogicAppsStandard.projectSubpath": "../app/logic-app",
     "azureLogicAppsStandard.projectLanguage": "JavaScript",
     "azureLogicAppsStandard.projectRuntime": "~4",
     "azureFunctions.suppressProject": true
